# dpy2-discordlists.py

./: README.md  pyproject.toml
discordlists/: __init__.py
