[tool.poetry]
name = "discordlists.py"
version = "1.2.0"
readme = "README.md"
description = "A simple API wrapper for botblock.org providing server count posting to all bot lists and fetching bot information from all."
authors = ["MattIPv4", "reticivis"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
keywords = ["api", "wrapper", "discord", "bot", "bots", "stats", "statistics", "botblock", "server", "guild", "count",
    "list", "lists", "get", "post", "botlist"]

[tool.poetry.urls]
"Funding" = "https://patreon.mattcowley.co.uk/"
"Support" = "https://discord.mattcowley.co.uk/"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", allow-prereleases = true, extras = ["speed"] }